--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticketing.dev # Made up domain for my local machine
+    - host: ticketing.com # Made up domain for my local machine
       http:
         paths:
           - path: /api/users/?(.*) # When requests come to this url redirect them to...
