--- a/auth/package.json
+++ b/auth/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.3",
+    "@types/mongoose": "^5.7.8",
     "express": "^4.17.1",
-    "express-validator": "^6.9.2",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.4.0",
+    "mongoose": "^5.9.7",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   }
 }
